--- a/style.css
+++ b/style.css
@@ -411,12 +411,18 @@ justify-content:flex-end;
     padding: 10px;
     height: 50%;
   }
+    .grid-container2{
+    grid-template-columns: auto;
+  }
 }
 @media screen and (min-width: 1440px){
   .grid-container{
     grid-template-columns: auto auto auto auto;
     grid-gap: 20px;
     margin: 10px;
+  }
+    .grid-container2{
+    grid-template-columns: auto;
   }
   .projects p {
     font-size: 20px;
