--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ justify-content:flex-end;
     height: 50%;
   }
     .grid-container2{
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto;
   }
 }
 @media screen and (min-width: 1440px){
@@ -417,7 +417,7 @@ justify-content:flex-end;
     margin: 10px;
   }
     .grid-container2{
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto auto;
   }
   .projects p {
     font-size: 20px;
