--- a/style.scss
+++ b/style.scss
@@ -172,7 +172,7 @@ $text-length: 16;
 .grid-container2{
   img{
     width:100%;
-    height:300px;
+    height:200px;
   }
  .card{
    margin:10px;
@@ -217,6 +217,14 @@ $text-length: 16;
             height:300px !important;
           }
         }
+        .grid-container2{
+         display:flex;
+         justify-content: center;
+          img{
+            width:300px;
+            height:200px;
+          }
+        }
       }
       
       @include for-size(med-screen){
@@ -253,5 +261,10 @@ $text-length: 16;
     @include for-size(desktop){
       .grid-container{
         grid-template-columns: auto auto auto auto;
+      }
+      .grid-container2{
+        img{
+          height:300px;
+        }
       }
     }
