--- a/style.scss
+++ b/style.scss
@@ -69,13 +69,20 @@ color:$text-color;
 $text-color: #d7b94c;
 $text-length: 16;
 
-    #particles-js{
+    .intro-section{
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
       position: relative;
       z-index:-1;
+
+      #particles-js{
+        width:100%;
+        height:100%;
+        position:absolute;
+        z-index:-1;
+      }
 
       .intro{
         position: absolute;
