--- a/style.css
+++ b/style.css
@@ -206,6 +206,80 @@ body {
   margin-top: 10px;
 }
 
+/*Toogle Switch*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+  margin: 0;
+}
+
+input, label {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 10px 0;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #1e2321;
+  -webkit-transition: 0.6s ease transform,0.6s -webkit-box-shadow;
+  transition: 0.6s ease transform,0.6s -webkit-box-shadow;
+  transition: 0.6s ease transform,0.6s box-shadow;
+  transition: 0.6s ease transform,0.6s box-shadow,0.6s -webkit-box-shadow;
+  -webkit-box-shadow: 2px 6px 20px #1e2321;
+          box-shadow: 2px 6px 20px #1e2321;
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+}
+
+.slider::before {
+  position: absolute;
+  content: "";
+  height: 80%;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #50bfe6;
+}
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #50bfe6;
+          box-shadow: 0 0 1px #50bfe6;
+}
+
+input:checked + .slider::before {
+  -webkit-transform: translateX(26px);
+          transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round::before {
+  border-radius: 50%;
+}
+
+/*End of toggle Style*/
 @media (min-width: 720px) {
   .projects-flex {
     -webkit-box-orient: horizontal;
