--- a/style.scss
+++ b/style.scss
@@ -211,6 +211,63 @@ $text-length: 16;
   }
 }
 
+/*Toogle Switch*/
+.switch{
+  position: relative;
+   display: inline-block;
+  width: 60px;
+    height: 30px;
+  margin: 0;
+ }
+ input,label{
+   display: inline-block;
+   vertical-align: middle;
+   margin: 10px 0;
+ }
+ .switch input{
+   opacity: 0;
+   width: 0;
+   height: 0;
+ }
+ .slider{
+   position: absolute;
+   cursor: pointer;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: #1e2321;
+   transition: 0.6s ease transform,0.6s box-shadow;
+   box-shadow: 2px 6px 20px #1e2321;
+   transform: translate(0px, 0px);
+ }
+ .slider::before{
+   position: absolute;
+   content:"";
+   height: 80%;
+   width: 26px;
+   left: 4px;
+   bottom: 4px;
+   background-color: #fff;
+   transition: 0.4s;
+ }
+ input:checked + .slider{
+   background-color: #50bfe6;
+ }
+ input:focus + .slider{
+   box-shadow: 0 0 1px #50bfe6;
+ }
+ input:checked + .slider::before{
+   transform: translateX(26px);
+ }
+ .slider.round{
+   border-radius: 34px;
+ }
+ .slider.round::before{
+   border-radius: 50%;
+ }
+ /*End of toggle Style*/
+
       @include for-size(tablet){
         .projects-flex{
           flex-direction: row;
