--- a/style.scss
+++ b/style.scss
@@ -359,6 +359,10 @@ $text-length: 16;
       }
       
       @include for-size(med-screen){
+          #loading{
+           top:50%;
+              left:50%;
+          }
        .navbar-nav{
          text-align: right;
        }
