--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #loading {
   position: absolute;
   top: 40%;
-  left: 45%;
+  left: 40%;
   text-align: center;
   font-size: 20px;
 }
@@ -297,7 +297,15 @@ body {
 .intro-section .intro h1 {
   overflow: hidden;
   position: relative;
-  text-shadow: 0 3px 0px grey, 0px 4px 0px grey, 0px 5px 0px grey, 0px 6px 0px grey, 0px 7px 0px grey, 0px 7px 0px grey, 0px 8px 0px grey, 0px 9px 0px grey, 0px 10px 0px grey;
+  text-shadow: 0 3px 0px grey,
+ 0px 4px 0px grey,
+ 0px 5px 0px grey,
+ 0px 6px 0px grey,
+ 0px 7px 0px grey,
+ 0px 7px 0px grey,
+ 0px 8px 0px grey,
+ 0px 9px 0px grey,
+ 0px 10px 0px grey;
 }
 
 .intro-section .intro h1::after {
