--- a/style.css
+++ b/style.css
@@ -297,15 +297,7 @@ body {
 .intro-section .intro h1 {
   overflow: hidden;
   position: relative;
-  text-shadow: 0 3px 0px grey,
- 0px 4px 0px grey,
- 0px 5px 0px grey,
- 0px 6px 0px grey,
- 0px 7px 0px grey,
- 0px 7px 0px grey,
- 0px 8px 0px grey,
- 0px 9px 0px grey,
- 0px 10px 0px grey;
+  text-shadow: 0 3px 0px grey, 0px 4px 0px grey, 0px 5px 0px grey, 0px 6px 0px grey, 0px 7px 0px grey, 0px 7px 0px grey, 0px 8px 0px grey, 0px 9px 0px grey, 0px 10px 0px grey;
 }
 
 .intro-section .intro h1::after {
@@ -501,6 +493,17 @@ input:checked + .slider::before {
   border-radius: 50%;
 }
 
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+}
+
 /*End of toggle Style*/
 @media (min-width: 720px) {
   .projects-flex {
@@ -532,6 +535,10 @@ input:checked + .slider::before {
 }
 
 @media (min-width: 1020px) {
+  #loading {
+    top: 50%;
+    left: 50%;
+  }
   .navbar-nav {
     text-align: right;
   }
